corrected errors, labels are not showing

--- a/styles.css
+++ b/styles.css
@@ -87,9 +87,4 @@ body {
   .footer {
     margin-top: auto;
   }
-
-  canvas {
-    display: block;
-    margin: auto;
-  }
   
